tests/integration/errors/match_non_exhaustive.rsg
// TEST: compile_error
// EXPECT-ERROR: non-exhaustive
module test_err

enum Color {
    Red,
    Green,
    Blue,
}

fn main() {
    c := Color.Red
    match c {
        Red => "red",
        Green => "green",
    }
}
